DRYing toggle submit code

--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -4,24 +4,32 @@
 
 <div id="profile-tab-root">
   <ul class="nav nav-tabs" role="tablist" id="profile-tabs">
-    <li role="presentation" class="profile-nav active" id="profile-emails-nav"><a href="#profile-emails" data-toggle="tab">Preferences</a></li>
+    <li role="presentation" class="profile-nav active" id="profile-emails-nav">
+      <a href="#profile-emails" data-toggle="tab">Preferences</a>
+    </li>
     <% if @profiles_available %>
-      <li role="presentation" class="profile-nav" id="profile-firecloud-nav"><a href="#profile-firecloud" data-toggle="tab">Terra Profile</a></li>
+      <li role="presentation" class="profile-nav" id="profile-firecloud-nav">
+        <a href="#profile-firecloud" data-toggle="tab">Terra Profile</a>
+      </li>
     <% else %>
-      <li role="presentation" class="profile-nav disabled" id="profile-firecloud-nav"><a href="#profile-firecloud" data-toggle="tooltip" title="FireCloud profiles are currently unavailable, please check back later.">Terra Profile</a></li>
+      <li role="presentation" class="profile-nav disabled" id="profile-firecloud-nav">
+        <a href="#profile-firecloud" data-toggle="tooltip"
+           title="FireCloud profiles are currently unavailable, please check back later.">Terra Profile</a>
+      </li>
     <% end %>
   </ul>
 
   <div class="tab-content top-pad">
     <div class="tab-pane active in" id="profile-emails" role="tabpanel">
-      <%= form_for(@user, url: update_profile_path, html: {class: 'form', id: 'update-user-session', data: {remote: true}}) do |f| %>
+      <%= form_for(@user, url: update_profile_path, html: {class: 'form', id: 'update-user-session',
+                                                           data: { remote: true }}) do |f| %>
+        <%= hidden_field_tag :toggle_id, "toggle_user_use_short_session" %>
         <div class="form-group">
           <%= f.hidden_field :use_short_session %>
-          <% button_text = @user.use_short_session ? "15m <i class='fas fa-fw fa-toggle-on'></i>".html_safe : "24h <i class='fas fa-fw fa-toggle-off'></i>".html_safe %>
-          <h3>
-            Session length
-            <%= link_to button_text, '#/', class: 'btn btn-default user-toggle',
-                        data: { input_id: 'user_use_short_session', form_id: 'update-user-session' } %>
+          <h3>Session length
+            <%= render_toggle(
+                  'update-user-session', 'user_use_short_session', @user.use_short_session, text_array: %w[15m 24h]
+                ) %>
           </h3>
           <p class="help-block">
             Toggles how long before you are signed out of your session.  The two options are 24 hours (default) or 15
@@ -29,14 +37,14 @@
         </div>
       <% end %>
 
-      <%= form_for(@user, url: update_profile_path, html: {class: 'form', id: 'update-user-profile', data: {remote: true}}) do |f| %>
+      <%= form_for(@user, url: update_profile_path, html: {class: 'form', id: 'update-user-profile',
+                                                           data: { remote: true }}) do |f| %>
+        <%= hidden_field_tag :toggle_id, "toggle_user_admin_email_delivery" %>
         <div class="form-group">
           <%= f.hidden_field :admin_email_delivery %>
-          <% button_text = @user.admin_email_delivery ? "On <i class='fas fa-fw fa-toggle-on'></i>".html_safe : "Off <i class='fas fa-fw fa-toggle-off'></i>".html_safe %>
           <h3>
             Admin email delivery
-            <%= link_to button_text, '#/', class: 'btn btn-default user-toggle',
-                        data: { input_id: 'user_admin_email_delivery', form_id: 'update-user-profile' } %>
+            <%= render_toggle('update-user-profile', 'user_admin_email_delivery', @user.admin_email_delivery) %>
           </h3>
           <p class="help-block">
             Toggles whether or not you would like to receive information emails from Single Cell Portal adminsitrators
@@ -47,8 +55,14 @@
 
       <h3>My study subscriptions</h3>
       <div class="bs-callout bs-callout-default">
-        <p>Use the table below to manage email delivery for all studies that are accessible to you.  You do not receive notification emails for studies when you make changes, only when others do.</p>
-        <p class="text-primary"><i class="fas fa-fw fa-info-circle"></i> Note: You will still receive emails with the results of parsing from files you upload, and automated emails from Terra on study sharing changes.</p>
+        <p>
+          Use the table below to manage email delivery for all studies that are accessible to you.  You do not receive
+          notification emails for studies when you make changes, only when others do.
+        </p>
+        <p class="text-primary">
+          <i class="fas fa-fw fa-info-circle"></i> Note: You will still receive emails with the results of parsing from
+          files you upload, and automated emails from Terra on study sharing changes.
+        </p>
       </div>
       <table class="table table-striped">
         <thead>
@@ -66,12 +80,20 @@
             <td><%= study.firecloud_project %></td>
             <td>Owner</td>
             <td>
-              <%= form_for(study, url: update_study_subscription_path(id: @user.id, study_id: study.id), html: {class: 'form-inline', id: "study_subscription_#{study.id}", data: {remote: true}}) do |f| %>
+              <%= form_for(study, url: update_study_subscription_path(id: @user.id, study_id: study.id),
+                           html: {class: 'form-inline', id: "study_subscription_#{study.id}",
+                                  data: {remote: true}}) do |f| %>
+                <%= hidden_field_tag :toggle_id, "toggle_study_default_options_deliver_emails_#{study.id}" %>
                 <div class="form-group">
                   <%= f.fields_for(:default_options) do |opts| %>
-                    <%= opts.hidden_field :deliver_emails, value: study.deliver_emails? %>
+                    <%= opts.hidden_field :deliver_emails?, value: study.deliver_emails?,
+                                          id: "study_default_options_deliver_emails_#{study.id}" %>
                   <% end %>
-                  <span class="btn btn-default toggle-study-subscription" data-study-id="<%= study.id %>"><%= study.deliver_emails? ? "On" : "Off" %> <i class="toggle-switch fa fa-fw fa-toggle-<%= study.deliver_emails? ? 'on' : 'off' %>"></i></span>
+                  <%= render_toggle(
+                        "study_subscription_#{study.id}",
+                        "study_default_options_deliver_emails_#{study.id}",
+                        study.deliver_emails?
+                      ) %>
                 </div>
               <% end %>
             </td>
@@ -84,10 +106,18 @@
             <td><%= share.firecloud_project %></td>
             <td><%= share.permission %></td>
             <td>
-              <%= form_for(share, url: update_share_subscription_path(id: @user.id, study_share_id: share.id), html: {class: 'form-inline', id: "share_subscription_#{share.id}", data: {remote: true}}) do |f| %>
+              <%= form_for(share, url: update_share_subscription_path(id: @user.id, study_share_id: share.id),
+                           html: {class: 'form-inline', id: "share_subscription_#{share.id}",
+                                  data: {remote: true}}) do |f| %>
+                <%= hidden_field_tag :toggle_id, "toggle_study_default_options_deliver_emails_#{study.id}" %>
                 <div class="form-group">
-                  <%= f.hidden_field :deliver_emails, value: share.deliver_emails %>
-                  <span class="btn btn-default toggle-share-subscription" data-study-share-id="<%= share.id %>"><%= share.deliver_emails ? "On" : "Off" %> <i class="toggle-switch fa fa-fw fa-toggle-<%= share.deliver_emails? ? 'on' : 'off' %>"></i></span>
+                  <%= f.hidden_field :deliver_emails, value: share.deliver_emails,
+                                     id: "study_default_options_deliver_emails_#{share.id}" %>
+                  <%= render_toggle(
+                        "share_subscription_#{share.id}",
+                        "study_default_options_deliver_emails_#{share.id}",
+                        share.deliver_emails
+                      ) %>
                 </div>
               <% end %>
             </td>
@@ -123,46 +153,8 @@
 
 <script type="text/javascript" nonce="<%= content_security_policy_script_nonce %>">
 
-    $('.toggle-share-subscription').click(function() {
-        let button = $(this);
-        let shareId = button.data('study-share-id');
-        let form = $('#share_subscription_' + shareId);
-        let deliverEmails = form.find("input[name='study_share[deliver_emails]']");
-        // toggle hidden form field
-        let newSub = deliverEmails.val() === 'true' ? 'false' : 'true';
-        console.log('changing subscription of share ' + shareId + ' to ' + newSub);
-        deliverEmails.val(newSub);
-        form.submit();
-    });
-
-    $('.toggle-study-subscription').click(function() {
-        let button = $(this);
-        let studyId = button.data('study-id');
-        let form = $('#study_subscription_' + studyId);
-        let deliverEmails = form.find("input[name='study[default_options][deliver_emails]']");
-        // toggle hidden form field
-        let newSub = deliverEmails.val() === 'true' ? 'false' : 'true';
-        console.log('changing subscription of share ' + studyId + ' to ' + newSub);
-        deliverEmails.val(newSub);
-        form.submit();
-    });
-
     $('.user-toggle').click(function() {
-        let inputId = $(this).data('input-id')
-        let formId = $(this).data('form-id')
-        let formField = $("#" + inputId);
-        let value =  formField.val() === 'true' ? 'false' : 'true';
-        formField.val(value);
-        let toggleState = value === 'true' ? 'on' : 'off'
-        let toggleText
-        if (formField === 'user_admin_email_delivery') {
-          toggleText = value === 'true' ? 'On' : 'Off'
-        } else {
-          toggleText = value === 'true' ? '15m' : '24h'
-        }
-        let newText = `${toggleText} <i class='fas fa-fw fa-toggle-${toggleState}'></i>`
-        $(this).html(newText)
-        $("#" + formId).submit();
+      submitToggleForm(this)
     });
 
     $(document).ready(function() {
