refining help text

--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -33,7 +33,7 @@
           </h3>
           <p class="help-block">
             Toggles how long before you are signed out of your session.  The two options are 24 hours (default) or 15
-            minutes (recommended for shared workstations or compliance environments).</p>
+            minutes (recommended for shared workstations).</p>
         </div>
       <% end %>
 
