addressing PR comments

--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -8,13 +8,13 @@
       <a href="#profile-emails" data-toggle="tab">Preferences</a>
     </li>
     <% if @profiles_available %>
-      <li role="presentation" class="profile-nav" id="profile-firecloud-nav">
-        <a href="#profile-firecloud" data-toggle="tab">Terra Profile</a>
+      <li role="presentation" class="profile-nav" id="profile-terra-nav">
+        <a href="#profile-terra" data-toggle="tab">Terra Profile</a>
       </li>
     <% else %>
-      <li role="presentation" class="profile-nav disabled" id="profile-firecloud-nav">
-        <a href="#profile-firecloud" data-toggle="tooltip"
-           title="FireCloud profiles are currently unavailable, please check back later.">Terra Profile</a>
+      <li role="presentation" class="profile-nav disabled" id="profile-terra-nav">
+        <a href="#profile-terra" data-toggle="tooltip"
+           title="Terra profiles are currently unavailable, please check back later.">Terra Profile</a>
       </li>
     <% end %>
   </ul>
@@ -127,7 +127,7 @@
       </table>
     </div>
     <% if @profiles_available %>
-      <div class="tab-pane" id="profile-firecloud" role="tabpanel">
+      <div class="tab-pane" id="profile-terra" role="tabpanel">
         <% if current_user.registered_for_firecloud %>
           <%= render partial: 'user_firecloud_profile' %>
         <% else %>
